// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Col component matches Col styles 1`] = `
.c0 {
  position: relative;
  width: 100%;
  padding-right: calc(30px / 2);
  padding-left: calc(30px / 2);
  -webkit-flex: 0 0 8.333333333333332%;
  -ms-flex: 0 0 8.333333333333332%;
  flex: 0 0 8.333333333333332%;
  max-width: 8.333333333333332%;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:36em) {
  .c0 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    max-width: none;
  }
}

@media (min-width:48em) {

}

@media (min-width:62em) {

}

@media (min-width:75em) {

}

<div
  class="c0"
/>
`;

exports[`Col component matches Col with specified lg offset 1`] = `
.c0 {
  position: relative;
  width: 100%;
  padding-right: calc(30px / 2);
  padding-left: calc(30px / 2);
  -webkit-flex: 0 0 8.333333333333332%;
  -ms-flex: 0 0 8.333333333333332%;
  flex: 0 0 8.333333333333332%;
  max-width: 8.333333333333332%;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:36em) {
  .c0 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    max-width: none;
  }
}

@media (min-width:48em) {

}

@media (min-width:62em) {
  .c0 {
    margin-left: NaN%;
  }
}

@media (min-width:75em) {

}

<div
  class="c0"
/>
`;

exports[`Col component matches Col with specified lg size 1`] = `
.c0 {
  position: relative;
  width: 100%;
  padding-right: calc(30px / 2);
  padding-left: calc(30px / 2);
  -webkit-flex: 0 0 8.333333333333332%;
  -ms-flex: 0 0 8.333333333333332%;
  flex: 0 0 8.333333333333332%;
  max-width: 8.333333333333332%;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:36em) {

}

@media (min-width:48em) {

}

@media (min-width:62em) {
  .c0 {
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
  }
}

@media (min-width:75em) {

}

<div
  class="c0"
/>
`;

exports[`Col component matches Col with specified md offset 1`] = `
.c0 {
  position: relative;
  width: 100%;
  padding-right: calc(30px / 2);
  padding-left: calc(30px / 2);
  -webkit-flex: 0 0 8.333333333333332%;
  -ms-flex: 0 0 8.333333333333332%;
  flex: 0 0 8.333333333333332%;
  max-width: 8.333333333333332%;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:36em) {
  .c0 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    max-width: none;
  }
}

@media (min-width:48em) {
  .c0 {
    margin-left: NaN%;
  }
}

@media (min-width:62em) {

}

@media (min-width:75em) {

}

<div
  class="c0"
/>
`;

exports[`Col component matches Col with specified md size 1`] = `
.c0 {
  position: relative;
  width: 100%;
  padding-right: calc(30px / 2);
  padding-left: calc(30px / 2);
  -webkit-flex: 0 0 8.333333333333332%;
  -ms-flex: 0 0 8.333333333333332%;
  flex: 0 0 8.333333333333332%;
  max-width: 8.333333333333332%;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:36em) {

}

@media (min-width:48em) {
  .c0 {
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
  }
}

@media (min-width:62em) {

}

@media (min-width:75em) {

}

<div
  class="c0"
/>
`;

exports[`Col component matches Col with specified sm offset 1`] = `
.c0 {
  position: relative;
  width: 100%;
  padding-right: calc(30px / 2);
  padding-left: calc(30px / 2);
  -webkit-flex: 0 0 8.333333333333332%;
  -ms-flex: 0 0 8.333333333333332%;
  flex: 0 0 8.333333333333332%;
  max-width: 8.333333333333332%;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:36em) {
  .c0 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    max-width: none;
    margin-left: NaN%;
  }
}

@media (min-width:48em) {

}

@media (min-width:62em) {

}

@media (min-width:75em) {

}

<div
  class="c0"
/>
`;

exports[`Col component matches Col with specified sm size 1`] = `
.c0 {
  position: relative;
  width: 100%;
  padding-right: calc(30px / 2);
  padding-left: calc(30px / 2);
  -webkit-flex: 0 0 8.333333333333332%;
  -ms-flex: 0 0 8.333333333333332%;
  flex: 0 0 8.333333333333332%;
  max-width: 8.333333333333332%;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:36em) {
  .c0 {
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
  }
}

@media (min-width:48em) {

}

@media (min-width:62em) {

}

@media (min-width:75em) {

}

<div
  class="c0"
/>
`;

exports[`Col component matches Col with specified xl offset 1`] = `
.c0 {
  position: relative;
  width: 100%;
  padding-right: calc(30px / 2);
  padding-left: calc(30px / 2);
  -webkit-flex: 0 0 8.333333333333332%;
  -ms-flex: 0 0 8.333333333333332%;
  flex: 0 0 8.333333333333332%;
  max-width: 8.333333333333332%;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:36em) {
  .c0 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    max-width: none;
  }
}

@media (min-width:48em) {

}

@media (min-width:62em) {

}

@media (min-width:75em) {
  .c0 {
    margin-left: NaN%;
  }
}

<div
  class="c0"
/>
`;

exports[`Col component matches Col with specified xl size 1`] = `
.c0 {
  position: relative;
  width: 100%;
  padding-right: calc(30px / 2);
  padding-left: calc(30px / 2);
  -webkit-flex: 0 0 8.333333333333332%;
  -ms-flex: 0 0 8.333333333333332%;
  flex: 0 0 8.333333333333332%;
  max-width: 8.333333333333332%;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:36em) {

}

@media (min-width:48em) {

}

@media (min-width:62em) {

}

@media (min-width:75em) {
  .c0 {
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
  }
}

<div
  class="c0"
/>
`;

exports[`Col component matches Col with specified xs offset 1`] = `
.c0 {
  position: relative;
  width: 100%;
  padding-right: calc(30px / 2);
  padding-left: calc(30px / 2);
  -webkit-flex: 0 0 8.333333333333332%;
  -ms-flex: 0 0 8.333333333333332%;
  flex: 0 0 8.333333333333332%;
  max-width: 8.333333333333332%;
  margin-left: NaN%;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:36em) {
  .c0 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    max-width: none;
  }
}

@media (min-width:48em) {

}

@media (min-width:62em) {

}

@media (min-width:75em) {

}

<div
  class="c0"
/>
`;

exports[`Col component matches Col with specified xs size 1`] = `
.c0 {
  position: relative;
  width: 100%;
  padding-right: calc(30px / 2);
  padding-left: calc(30px / 2);
  -webkit-flex: 0 0 8.333333333333332%;
  -ms-flex: 0 0 8.333333333333332%;
  flex: 0 0 8.333333333333332%;
  max-width: 8.333333333333332%;
  -webkit-flex: 0 0 50%;
  -ms-flex: 0 0 50%;
  flex: 0 0 50%;
  max-width: 50%;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:36em) {

}

@media (min-width:48em) {

}

@media (min-width:62em) {

}

@media (min-width:75em) {

}

<div
  class="c0"
/>
`;
